src/main/java/org/docx4j/model/datastorage/XPathEnhancerParser.java
/*
 * Copyright 2012 Plutext Pty Ltd.
 * 
 * This file is part of docx4j.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
 
package org.docx4j.model.datastorage;


import java.util.HashMap;

import org.antlr.runtime.ANTLRStringStream;
import org.antlr.runtime.BitSet;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenRewriteStream;
import org.antlr.runtime.TokenStream;
import org.antlr.stringtemplate.StringTemplate;
import org.antlr.stringtemplate.StringTemplateGroup;
import org.antlr.stringtemplate.language.AngleBracketTemplateLexer;
public class XPathEnhancerParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PATHSEP", "ABRPATH", "LPAR", "RPAR", "LBRAC", "RBRAC", "MINUS", "PLUS", "DOT", "MUL", "DOTDOT", "AT", "COMMA", "PIPE", "LESS", "MORE", "LE", "GE", "COLON", "CC", "APOS", "QUOT", "AxisName", "NodeType", "Literal", "Number", "NCName", "Digits", "Whitespace", "NCNameStartChar", "NCNameChar", "PermittedHighSurrogateChar", "LowSurrogateChar", "'processing-instruction'", "'or'", "'and'", "'='", "'!='", "'div'", "'mod'", "'$'"
    };
    public static final int EOF=-1;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int PATHSEP=4;
    public static final int ABRPATH=5;
    public static final int LPAR=6;
    public static final int RPAR=7;
    public static final int LBRAC=8;
    public static final int RBRAC=9;
    public static final int MINUS=10;
    public static final int PLUS=11;
    public static final int DOT=12;
    public static final int MUL=13;
    public static final int DOTDOT=14;
    public static final int AT=15;
    public static final int COMMA=16;
    public static final int PIPE=17;
    public static final int LESS=18;
    public static final int MORE=19;
    public static final int LE=20;
    public static final int GE=21;
    public static final int COLON=22;
    public static final int CC=23;
    public static final int APOS=24;
    public static final int QUOT=25;
    public static final int AxisName=26;
    public static final int NodeType=27;
    public static final int Literal=28;
    public static final int Number=29;
    public static final int NCName=30;
    public static final int Digits=31;
    public static final int Whitespace=32;
    public static final int NCNameStartChar=33;
    public static final int NCNameChar=34;
    public static final int PermittedHighSurrogateChar=35;
    public static final int LowSurrogateChar=36;

    // delegates
    // delegators


        public XPathEnhancerParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public XPathEnhancerParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected StringTemplateGroup templateLib =
      new StringTemplateGroup("XPathEnhancerParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib(StringTemplateGroup templateLib) {
      this.templateLib = templateLib;
    }
    public StringTemplateGroup getTemplateLib() {
      return templateLib;
    }
    /** allows convenient multi-value initialization:
     *  "new STAttrMap().put(...).put(...)"
     */
    @SuppressWarnings("unchecked")
    public static class STAttrMap extends HashMap {
      public STAttrMap put(String attrName, Object value) {
        super.put(attrName, value);
        return this;
      }
      public STAttrMap put(String attrName, int value) {
        super.put(attrName, new Integer(value));
        return this;
      }
    }

    public String[] getTokenNames() { return XPathEnhancerParser.tokenNames; }
    public String getGrammarFileName() { return "src\\main\\antlr\\XPathEnhancer.g"; }


    private String index;
    private String prefix;
    private int prefixLength;

    public static String enhanceXPath(final String prefix, final int index, final String xpath) {
        
      final ANTLRStringStream stringStream = new ANTLRStringStream(xpath);
      final XPathEnhancerLexer xl = new XPathEnhancerLexer(stringStream);
      final TokenRewriteStream trs = new TokenRewriteStream(xl);
      final XPathEnhancerParser xp = new XPathEnhancerParser(trs, index, prefix);
        
      try {
        xp.main();
      } catch (RecognitionException e) {
        throw new IllegalArgumentException(xpath + " is no valid XPath expression", e);
      }
      
      final String enhanced = trs.toString();
      return enhanced;     
    }

    public XPathEnhancerParser(TokenStream input, final int index, final String prefix) {
        this(input);
        this.index = "" + index;
        this.prefix = prefix;
        this.prefixLength = prefix.length();
    }
         
    private boolean sharesPrefix(final String path) {
      return path != null && path.startsWith(prefix);
    }

    private String remainingSuffix(final String path) {
      if (path == null || path.length() < prefixLength) {
        return null;
      } else {
        return path.substring(prefixLength);
      }
    }


    public static class main_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "main"
    // src\\main\\antlr\\XPathEnhancer.g:87:1: main : expr ;
    public final XPathEnhancerParser.main_return main() throws RecognitionException {
        XPathEnhancerParser.main_return retval = new XPathEnhancerParser.main_return();
        retval.start = input.LT(1);

        try {
            // src\\main\\antlr\\XPathEnhancer.g:88:3: ( expr )
            // src\\main\\antlr\\XPathEnhancer.g:89:3: expr
            {
            pushFollow(FOLLOW_expr_in_main331);
            expr();

            state._fsp--;


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "main"

    public static class locationPath_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "locationPath"
    // src\\main\\antlr\\XPathEnhancer.g:92:1: locationPath : ( relativeLocationPath | absoluteLocationPathNoroot );
    public final XPathEnhancerParser.locationPath_return locationPath() throws RecognitionException {
        XPathEnhancerParser.locationPath_return retval = new XPathEnhancerParser.locationPath_return();
        retval.start = input.LT(1);

        try {
            // src\\main\\antlr\\XPathEnhancer.g:93:3: ( relativeLocationPath | absoluteLocationPathNoroot )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( ((LA1_0>=DOT && LA1_0<=AT)||(LA1_0>=AxisName && LA1_0<=NodeType)||LA1_0==NCName||LA1_0==37) ) {
                alt1=1;
            }
            else if ( ((LA1_0>=PATHSEP && LA1_0<=ABRPATH)) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // src\\main\\antlr\\XPathEnhancer.g:94:3: relativeLocationPath
                    {
                    pushFollow(FOLLOW_relativeLocationPath_in_locationPath346);
                    relativeLocationPath();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // src\\main\\antlr\\XPathEnhancer.g:95:6: absoluteLocationPathNoroot
                    {
                    pushFollow(FOLLOW_absoluteLocationPathNoroot_in_locationPath353);
                    absoluteLocationPathNoroot();

                    state._fsp--;


                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "locationPath"

    public static class absoluteLocationPathNoroot_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "absoluteLocationPathNoroot"
    // src\\main\\antlr\\XPathEnhancer.g:98:1: absoluteLocationPathNoroot : originalAbsoluteLocationPathNoroot -> template(sharesPrefix= sharesPrefix($text) commonPrefix= prefix index= index remainingSuffix= remainingSuffix($text) originalPath= $text ) \"<if(sharesPrefix)><commonPrefix>[<index>]<remainingSuffix><else><originalPath><endif>\";
    public final XPathEnhancerParser.absoluteLocationPathNoroot_return absoluteLocationPathNoroot() throws RecognitionException {
        XPathEnhancerParser.absoluteLocationPathNoroot_return retval = new XPathEnhancerParser.absoluteLocationPathNoroot_return();
        retval.start = input.LT(1);

        try {
            // src\\main\\antlr\\XPathEnhancer.g:99:3: ( originalAbsoluteLocationPathNoroot -> template(sharesPrefix= sharesPrefix($text) commonPrefix= prefix index= index remainingSuffix= remainingSuffix($text) originalPath= $text ) \"<if(sharesPrefix)><commonPrefix>[<index>]<remainingSuffix><else><originalPath><endif>\")
            // src\\main\\antlr\\XPathEnhancer.g:100:3: originalAbsoluteLocationPathNoroot
            {
            pushFollow(FOLLOW_originalAbsoluteLocationPathNoroot_in_absoluteLocationPathNoroot368);
            originalAbsoluteLocationPathNoroot();

            state._fsp--;



            // TEMPLATE REWRITE
            // 101:3: -> template(sharesPrefix= sharesPrefix($text) commonPrefix= prefix index= index remainingSuffix= remainingSuffix($text) originalPath= $text ) \"<if(sharesPrefix)><commonPrefix>[<index>]<remainingSuffix><else><originalPath><endif>\"
            {
                retval.st = new StringTemplate(templateLib, "<if(sharesPrefix)><commonPrefix>[<index>]<remainingSuffix><else><originalPath><endif>",
              new STAttrMap().put("sharesPrefix",  sharesPrefix(input.toString(retval.start,input.LT(-1)))    ).put("commonPrefix",  prefix                 ).put("index",  index                  ).put("remainingSuffix",  remainingSuffix(input.toString(retval.start,input.LT(-1))) ).put("originalPath",  input.toString(retval.start,input.LT(-1))                  ));
            }

            ((TokenRewriteStream)input).replace(
              ((Token)retval.start).getTokenIndex(),
              input.LT(-1).getTokenIndex(),
              retval.st);
            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "absoluteLocationPathNoroot"

    public static class originalAbsoluteLocationPathNoroot_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "originalAbsoluteLocationPathNoroot"
    // src\\main\\antlr\\XPathEnhancer.g:111:1: originalAbsoluteLocationPathNoroot : ( '/' relativeLocationPath | '//' relativeLocationPath );
    public final XPathEnhancerParser.originalAbsoluteLocationPathNoroot_return originalAbsoluteLocationPathNoroot() throws RecognitionException {
        XPathEnhancerParser.originalAbsoluteLocationPathNoroot_return retval = new XPathEnhancerParser.originalAbsoluteLocationPathNoroot_return();
        retval.start = input.LT(1);

        try {
            // src\\main\\antlr\\XPathEnhancer.g:112:3: ( '/' relativeLocationPath | '//' relativeLocationPath )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==PATHSEP) ) {
                alt2=1;
            }
            else if ( (LA2_0==ABRPATH) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // src\\main\\antlr\\XPathEnhancer.g:113:3: '/' relativeLocationPath
                    {
                    match(input,PATHSEP,FOLLOW_PATHSEP_in_originalAbsoluteLocationPathNoroot532); 
                    pushFollow(FOLLOW_relativeLocationPath_in_originalAbsoluteLocationPathNoroot534);
                    relativeLocationPath();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // src\\main\\antlr\\XPathEnhancer.g:114:5: '//' relativeLocationPath
                    {
                    match(input,ABRPATH,FOLLOW_ABRPATH_in_originalAbsoluteLocationPathNoroot540); 
                    pushFollow(FOLLOW_relativeLocationPath_in_originalAbsoluteLocationPathNoroot542);
                    relativeLocationPath();

                    state._fsp--;


                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "originalAbsoluteLocationPathNoroot"

    public static class relativeLocationPath_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "relativeLocationPath"
    // src\\main\\antlr\\XPathEnhancer.g:117:1: relativeLocationPath : step ( ( '/' | '//' ) step )* ;
    public final XPathEnhancerParser.relativeLocationPath_return relativeLocationPath() throws RecognitionException {
        XPathEnhancerParser.relativeLocationPath_return retval = new XPathEnhancerParser.relativeLocationPath_return();
        retval.start = input.LT(1);

        try {
            // src\\main\\antlr\\XPathEnhancer.g:118:3: ( step ( ( '/' | '//' ) step )* )
            // src\\main\\antlr\\XPathEnhancer.g:119:3: step ( ( '/' | '//' ) step )*
            {
            pushFollow(FOLLOW_step_in_relativeLocationPath557);
            step();

            state._fsp--;

            // src\\main\\antlr\\XPathEnhancer.g:120:3: ( ( '/' | '//' ) step )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( ((LA3_0>=PATHSEP && LA3_0<=ABRPATH)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // src\\main\\antlr\\XPathEnhancer.g:121:5: ( '/' | '//' ) step
            	    {
            	    if ( (input.LA(1)>=PATHSEP && input.LA(1)<=ABRPATH) ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_step_in_relativeLocationPath597);
            	    step();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "relativeLocationPath"

    public static class step_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "step"
    // src\\main\\antlr\\XPathEnhancer.g:129:1: step : ( axisSpecifier nodeTest ( predicate )* | abbreviatedStep );
    public final XPathEnhancerParser.step_return step() throws RecognitionException {
        XPathEnhancerParser.step_return retval = new XPathEnhancerParser.step_return();
        retval.start = input.LT(1);

        try {
            // src\\main\\antlr\\XPathEnhancer.g:130:3: ( axisSpecifier nodeTest ( predicate )* | abbreviatedStep )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==MUL||LA5_0==AT||(LA5_0>=AxisName && LA5_0<=NodeType)||LA5_0==NCName||LA5_0==37) ) {
                alt5=1;
            }
            else if ( (LA5_0==DOT||LA5_0==DOTDOT) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // src\\main\\antlr\\XPathEnhancer.g:131:3: axisSpecifier nodeTest ( predicate )*
                    {
                    pushFollow(FOLLOW_axisSpecifier_in_step617);
                    axisSpecifier();

                    state._fsp--;

                    pushFollow(FOLLOW_nodeTest_in_step619);
                    nodeTest();

                    state._fsp--;

                    // src\\main\\antlr\\XPathEnhancer.g:131:26: ( predicate )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==LBRAC) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // src\\main\\antlr\\XPathEnhancer.g:131:26: predicate
                    	    {
                    	    pushFollow(FOLLOW_predicate_in_step621);
                    	    predicate();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);


                    }
                    break;
                case 2 :
                    // src\\main\\antlr\\XPathEnhancer.g:132:5: abbreviatedStep
                    {
                    pushFollow(FOLLOW_abbreviatedStep_in_step628);
                    abbreviatedStep();

                    state._fsp--;


                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "step"

    public static class axisSpecifier_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "axisSpecifier"
    // src\\main\\antlr\\XPathEnhancer.g:135:1: axisSpecifier : ( AxisName '::' | ( '@' )? );
    public final XPathEnhancerParser.axisSpecifier_return axisSpecifier() throws RecognitionException {
        XPathEnhancerParser.axisSpecifier_return retval = new XPathEnhancerParser.axisSpecifier_return();
        retval.start = input.LT(1);

        try {
            // src\\main\\antlr\\XPathEnhancer.g:136:3: ( AxisName '::' | ( '@' )? )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==AxisName) ) {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==CC) ) {
                    alt7=1;
                }
                else if ( (LA7_1==EOF||(LA7_1>=PATHSEP && LA7_1<=ABRPATH)||(LA7_1>=RPAR && LA7_1<=PLUS)||LA7_1==MUL||(LA7_1>=COMMA && LA7_1<=COLON)||(LA7_1>=38 && LA7_1<=43)) ) {
                    alt7=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA7_0==MUL||LA7_0==AT||LA7_0==NodeType||LA7_0==NCName||LA7_0==37) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // src\\main\\antlr\\XPathEnhancer.g:137:3: AxisName '::'
                    {
                    match(input,AxisName,FOLLOW_AxisName_in_axisSpecifier643); 
                    match(input,CC,FOLLOW_CC_in_axisSpecifier645); 

                    }
                    break;
                case 2 :
                    // src\\main\\antlr\\XPathEnhancer.g:138:5: ( '@' )?
                    {
                    // src\\main\\antlr\\XPathEnhancer.g:138:5: ( '@' )?
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==AT) ) {
                        alt6=1;
                    }
                    switch (alt6) {
                        case 1 :
                            // src\\main\\antlr\\XPathEnhancer.g:138:5: '@'
                            {
                            match(input,AT,FOLLOW_AT_in_axisSpecifier651); 

                            }
                            break;

                    }


                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "axisSpecifier"

    public static class nodeTest_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "nodeTest"
    // src\\main\\antlr\\XPathEnhancer.g:141:1: nodeTest : ( nameTest | NodeType '(' ')' | 'processing-instruction' '(' Literal ')' );
    public final XPathEnhancerParser.nodeTest_return nodeTest() throws RecognitionException {
        XPathEnhancerParser.nodeTest_return retval = new XPathEnhancerParser.nodeTest_return();
        retval.start = input.LT(1);

        try {
            // src\\main\\antlr\\XPathEnhancer.g:142:3: ( nameTest | NodeType '(' ')' | 'processing-instruction' '(' Literal ')' )
            int alt8=3;
            switch ( input.LA(1) ) {
            case MUL:
            case AxisName:
            case NCName:
                {
                alt8=1;
                }
                break;
            case NodeType:
                {
                alt8=2;
                }
                break;
            case 37:
                {
                alt8=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }

            switch (alt8) {
                case 1 :
                    // src\\main\\antlr\\XPathEnhancer.g:143:3: nameTest
                    {
                    pushFollow(FOLLOW_nameTest_in_nodeTest667);
                    nameTest();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // src\\main\\antlr\\XPathEnhancer.g:144:5: NodeType '(' ')'
                    {
                    match(input,NodeType,FOLLOW_NodeType_in_nodeTest673); 
                    match(input,LPAR,FOLLOW_LPAR_in_nodeTest675); 
                    match(input,RPAR,FOLLOW_RPAR_in_nodeTest677); 

                    }
                    break;
                case 3 :
                    // src\\main\\antlr\\XPathEnhancer.g:145:5: 'processing-instruction' '(' Literal ')'
                    {
                    match(input,37,FOLLOW_37_in_nodeTest683); 
                    match(input,LPAR,FOLLOW_LPAR_in_nodeTest685); 
                    match(input,Literal,FOLLOW_Literal_in_nodeTest687); 
                    match(input,RPAR,FOLLOW_RPAR_in_nodeTest689); 

                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "nodeTest"

    public static class predicate_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "predicate"
    // src\\main\\antlr\\XPathEnhancer.g:148:1: predicate : '[' expr ']' ;
    public final XPathEnhancerParser.predicate_return predicate() throws RecognitionException {
        XPathEnhancerParser.predicate_return retval = new XPathEnhancerParser.predicate_return();
        retval.start = input.LT(1);

        try {
            // src\\main\\antlr\\XPathEnhancer.g:149:3: ( '[' expr ']' )
            // src\\main\\antlr\\XPathEnhancer.g:150:3: '[' expr ']'
            {
            match(input,LBRAC,FOLLOW_LBRAC_in_predicate704); 
            pushFollow(FOLLOW_expr_in_predicate706);
            expr();

            state._fsp--;

            match(input,RBRAC,FOLLOW_RBRAC_in_predicate708); 

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "predicate"

    public static class abbreviatedStep_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "abbreviatedStep"
    // src\\main\\antlr\\XPathEnhancer.g:153:1: abbreviatedStep : ( '.' | '..' );
    public final XPathEnhancerParser.abbreviatedStep_return abbreviatedStep() throws RecognitionException {
        XPathEnhancerParser.abbreviatedStep_return retval = new XPathEnhancerParser.abbreviatedStep_return();
        retval.start = input.LT(1);

        try {
            // src\\main\\antlr\\XPathEnhancer.g:154:3: ( '.' | '..' )
            // src\\main\\antlr\\XPathEnhancer.g:
            {
            if ( input.LA(1)==DOT||input.LA(1)==DOTDOT ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "abbreviatedStep"

    public static class expr_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "expr"
    // src\\main\\antlr\\XPathEnhancer.g:159:1: expr : orExpr ;
    public final XPathEnhancerParser.expr_return expr() throws RecognitionException {
        XPathEnhancerParser.expr_return retval = new XPathEnhancerParser.expr_return();
        retval.start = input.LT(1);

        try {
            // src\\main\\antlr\\XPathEnhancer.g:160:3: ( orExpr )
            // src\\main\\antlr\\XPathEnhancer.g:161:3: orExpr
            {
            pushFollow(FOLLOW_orExpr_in_expr744);
            orExpr();

            state._fsp--;


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expr"

    public static class primaryExpr_return extends ParserRuleReturnScope {
        public StringTemplate st;
